@@ -23,7 +23,7 @@ import static org.junit.Assert.assertEquals;
 public class TryCatchBlockTest extends AbstractGroovyCpsTest {
     @Test
     public void stackTraceFixup() throws Throwable {
-        List<StackTraceElement> elements = Arrays.asList((StackTraceElement[]) evalCPSonly(
+        List<StackTraceElement> elements = List.of((StackTraceElement[]) evalCPSonly(
             "\n" +
             "\n" +
             "def x() {\n" +
