@@ -60,7 +60,7 @@ public class AmbiguousEchoUpperStep extends Step implements Serializable {
 
         @Override
         public Set<? extends Class<?>> getRequiredContext() {
-            return Collections.singleton(TaskListener.class);
+            return Set.of(TaskListener.class);
         }
     }
 }
